# MyLanguage

./: .gitignore  CMakeLists.txt  Value.h  main.cpp
ByteCodeSamples/: BubbleSort.txt  SieveStandalone.txt
src/: ByteCodeParser.h  main.cpp
src/VirtualMachine/: Chunk.h  OpCode.h  VirtualMachine.h
src/VirtualMachine/Value/: Value.h  ValueUtilsForLogic.h  ValueUtilsForPrint.h
